# MusicBotCI

./: .pre-commit-config.yaml  README.md  pyproject.toml
musicbotci/: main.py
musicbotci/actions/: __init__.py  tag_pom.py
