[tool.poetry]
name = "MusicBotCI"
version = "0.0.1"
license = "LGPL-3.0-or-later"
description = "jagrosh/MusicBot - Python CI Tool"
authors = ["Jacob Oldfield <jacob@devigami.com>"]
maintainers = [
    "Jacob Oldfield <jacob@devigami.com>",
]
readme = "README.md"
homepage = "https://github.com/jacob88/MusicBot"
repository = "https://github.com/jacob88/MusicBot"
documentation = ""
keywords = ["MusicBot", "jagrosh/MusicBot", "MusicBotCI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Topic :: Multimedia :: Sound/Audio",
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typer = {extras = ["all"], version = "0.6.1"}
lxml = "4.9.1"

[tool.poetry.dev-dependencies]
pylint = "2.15.3"
pre-commit = "2.20.0"
pytest = "7.1.3"
pytest-cov = "4.0.0"
pytest-html = "3.1.1"

[tool.poetry.scripts]
musicbotci = "musicbotci.main:app"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.2.0", "setuptools>=65.4.1", "setuptools_scm[toml]>=7.0.5"]
build-backend = "poetry.core.masonry.api"
